--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
+    "connect-mongo": "^5.1.0",
     "connect-redis": "^8.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
